--- a/.gitignore
+++ b/.gitignore
@@ -6,6 +6,10 @@ _site/
 .sass-cache/
 .jekyll-cache/
 .jekyll-metadata
+venv/
+.venv/
+.env
+.env.example
 
 # Additional Ruby/bundler ignore for when you run: bundle install
 /vendor
@@ -16,3 +20,34 @@ _site/
 # counterproductive to check this file into the repository.
 # Details at https://github.com/github/pages-gem/issues/768
 Gemfile.lock
+
+
+# Virtual environments
+venv/
+.venv/
+env/
+ENV/
+
+# Python cache
+__pycache__/
+*.pyc
+*.pyo
+*.pyd
+
+# Distribution / packaging
+build/
+dist/
+*.egg-info/
+
+# Logs
+*.log
+
+# VS Code
+.vscode/
+
+# Jupyter
+.ipynb_checkpoints/
+
+# OS
+.DS_Store
+Thumbs.db
